@@ -24,8 +24,8 @@
         <div class="header">
             <button>Save</button>
             <button>Source Control</button>
-            <button>Settings</button>
-            <button>Build/Compile</button>
+            <button id="header-settings">Settings</button>
+            <button id="header-buildcompile">Build/Compile</button>
             <button>Run</button>
             <button>Run Remotely</button>
             <button>Debug</button>
