@@ -1,0 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../fonts/fonts.css">
+    <link rel="stylesheet" href="../../styles/webview/webview.css">
+</head>
+<body>
+    <h1>Project Settings</h1>
+    <select id="cAndCppCompiler">
+        <option>gcc</option>
+        <option>clang</option>
+        <option>Microsoft Visual C++</option>
+    </select>
+</body>
+</html>
