@@ -1,0 +1,12 @@
+module.exports = {
+    meta: {
+        materialType: 'lambert'
+    },
+    lambertMaterial: {
+        color: 0xff0000,
+        transparent: false,
+        opacity: 1,
+        wireframe: false,
+        reflectivity: 1
+    }
+}
