@@ -1,3 +1,6 @@
+1/24/2021:
+    BASIC MATERIALS WORK, they didn't before due to an asynchronous bug
+
 1/9/2021:
     Made the sidebar localized
 
